# neovim-remote

./: .gitignore  .travis.yml  CHANGELOG.md  INSTALLATION.md  LICENSE  Makefile  README.md  README.rst  nvim-remote.py  nvr  pyproject.toml  setup.py
contrib/: completion.bash  completion.fish
neovimremote/: __init__.py
nvr/: __init__.py  nvr.py
tests/: test_nvr.py
